ADD: AppUser Entity
Added with only a relationship with User

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -156,6 +156,13 @@
     <script src="scripts/app/admin/tracker/tracker.controller.js"></script>
     <script src="scripts/components/tracker/tracker.service.js"></script>
     <script src="bower_components/messageformat/locale/es.js"></script>
+    <script src="scripts/app/entities/appUser/appUser.js"></script>
+    <script src="scripts/app/entities/appUser/appUser.controller.js"></script>
+    <script src="scripts/app/entities/appUser/appUser-dialog.controller.js"></script>
+    <script src="scripts/app/entities/appUser/appUser-delete-dialog.controller.js"></script>
+    <script src="scripts/app/entities/appUser/appUser-detail.controller.js"></script>
+    <script src="scripts/components/entities/appUser/appUser.service.js"></script>
+    <script src="scripts/components/entities/appUser/appUser.search.service.js"></script>
     <!-- endbuild -->
 </body>
 </html>
