ADDITION: Follows Relationship between AppUser

--- a/src/main/webapp/scripts/app/entities/appUser/appUser-detail.html
+++ b/src/main/webapp/scripts/app/entities/appUser/appUser-detail.html
@@ -12,10 +12,10 @@
             <tbody>
             <tr>
                 <td>
-                    <span translate="volunteercrowdApp.appUser.phoneNomber">PhoneNomber</span>
+                    <span translate="volunteercrowdApp.appUser.phoneNumber">PhoneNumber</span>
                 </td>
                 <td>
-                    <span class="form-control-static">{{appUser.phoneNomber}}</span>
+                    <span class="form-control-static">{{appUser.phoneNumber}}</span>
                 </td>
             </tr>
             <tr>
