--- a/src/main/webapp/scripts/app/entities/appUser/appUser-dialog.html
+++ b/src/main/webapp/scripts/app/entities/appUser/appUser-dialog.html
@@ -14,13 +14,13 @@
                     ng-model="appUser.id" readonly />
         </div>
         <div class="form-group">
-            <label class="control-label" translate="volunteercrowdApp.appUser.phoneNomber" for="field_phoneNomber">PhoneNomber</label>
-            <input type="text" class="form-control" name="phoneNomber" id="field_phoneNomber"
-                    ng-model="appUser.phoneNomber"
+            <label class="control-label" translate="volunteercrowdApp.appUser.phoneNumber" for="field_phoneNumber">PhoneNumber</label>
+            <input type="text" class="form-control" name="phoneNumber" id="field_phoneNumber"
+                    ng-model="appUser.phoneNumber"
                     ng-pattern="/([+]\d{2})?\d{9}/" />
-            <div ng-show="editForm.phoneNomber.$invalid">
+            <div ng-show="editForm.phoneNumber.$invalid">
                 <p class="help-block"
-                    ng-show="editForm.phoneNomber.$error.pattern" translate="entity.validation.pattern" translate-value-pattern="([+]\d{2})?\d{9}">
+                    ng-show="editForm.phoneNumber.$error.pattern" translate="entity.validation.pattern" translate-value-pattern="([+]\d{2})?\d{9}">
                     This field should follow pattern "([+]\d{2})?\d{9}".
                 </p>
             </div>
