FIX: Gender relationship
Fixed gender relationship.
All test currently working.
Populate currently working.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -163,6 +163,13 @@
     <script src="scripts/app/entities/appUser/appUser-detail.controller.js"></script>
     <script src="scripts/components/entities/appUser/appUser.service.js"></script>
     <script src="scripts/components/entities/appUser/appUser.search.service.js"></script>
+    <script src="scripts/app/entities/naturalPerson/naturalPerson.js"></script>
+    <script src="scripts/app/entities/naturalPerson/naturalPerson.controller.js"></script>
+    <script src="scripts/app/entities/naturalPerson/naturalPerson-dialog.controller.js"></script>
+    <script src="scripts/app/entities/naturalPerson/naturalPerson-delete-dialog.controller.js"></script>
+    <script src="scripts/app/entities/naturalPerson/naturalPerson-detail.controller.js"></script>
+    <script src="scripts/components/entities/naturalPerson/naturalPerson.service.js"></script>
+    <script src="scripts/components/entities/naturalPerson/naturalPerson.search.service.js"></script>
     <!-- endbuild -->
 </body>
 </html>
