--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -170,6 +170,13 @@
     <script src="scripts/app/entities/naturalPerson/naturalPerson-detail.controller.js"></script>
     <script src="scripts/components/entities/naturalPerson/naturalPerson.service.js"></script>
     <script src="scripts/components/entities/naturalPerson/naturalPerson.search.service.js"></script>
+    <script src="scripts/app/entities/request/request.js"></script>
+    <script src="scripts/app/entities/request/request.controller.js"></script>
+    <script src="scripts/app/entities/request/request-dialog.controller.js"></script>
+    <script src="scripts/app/entities/request/request-delete-dialog.controller.js"></script>
+    <script src="scripts/app/entities/request/request-detail.controller.js"></script>
+    <script src="scripts/components/entities/request/request.service.js"></script>
+    <script src="scripts/components/entities/request/request.search.service.js"></script>
     <!-- endbuild -->
 </body>
 </html>
