ADD / FIX: LegalEntity and Curriculum / issue#1
Created entities LegalEntity and Curriculum with its relationships.
Fixed a bug (issue#1 on GitHub).
All test currently working.
Populate working

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -177,6 +177,20 @@
     <script src="scripts/app/entities/request/request-detail.controller.js"></script>
     <script src="scripts/components/entities/request/request.service.js"></script>
     <script src="scripts/components/entities/request/request.search.service.js"></script>
+    <script src="scripts/app/entities/legalEntity/legalEntity.js"></script>
+    <script src="scripts/app/entities/legalEntity/legalEntity.controller.js"></script>
+    <script src="scripts/app/entities/legalEntity/legalEntity-dialog.controller.js"></script>
+    <script src="scripts/app/entities/legalEntity/legalEntity-delete-dialog.controller.js"></script>
+    <script src="scripts/app/entities/legalEntity/legalEntity-detail.controller.js"></script>
+    <script src="scripts/components/entities/legalEntity/legalEntity.service.js"></script>
+    <script src="scripts/components/entities/legalEntity/legalEntity.search.service.js"></script>
+    <script src="scripts/app/entities/curriculum/curriculum.js"></script>
+    <script src="scripts/app/entities/curriculum/curriculum.controller.js"></script>
+    <script src="scripts/app/entities/curriculum/curriculum-dialog.controller.js"></script>
+    <script src="scripts/app/entities/curriculum/curriculum-delete-dialog.controller.js"></script>
+    <script src="scripts/app/entities/curriculum/curriculum-detail.controller.js"></script>
+    <script src="scripts/components/entities/curriculum/curriculum.service.js"></script>
+    <script src="scripts/components/entities/curriculum/curriculum.search.service.js"></script>
     <!-- endbuild -->
 </body>
 </html>
