ADD: Tag, Ability entities and its relationships
Added Tag entity and its relation with Ability.
Added Ability entity and its relation with AppUser.

Changed follower and following type from List<AppUser> to Set<AppUSer>
All test currently working.
Populate currently working.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -191,6 +191,20 @@
     <script src="scripts/app/entities/curriculum/curriculum-detail.controller.js"></script>
     <script src="scripts/components/entities/curriculum/curriculum.service.js"></script>
     <script src="scripts/components/entities/curriculum/curriculum.search.service.js"></script>
+    <script src="scripts/app/entities/ability/ability.js"></script>
+    <script src="scripts/app/entities/ability/ability.controller.js"></script>
+    <script src="scripts/app/entities/ability/ability-dialog.controller.js"></script>
+    <script src="scripts/app/entities/ability/ability-delete-dialog.controller.js"></script>
+    <script src="scripts/app/entities/ability/ability-detail.controller.js"></script>
+    <script src="scripts/components/entities/ability/ability.service.js"></script>
+    <script src="scripts/components/entities/ability/ability.search.service.js"></script>
+    <script src="scripts/app/entities/tag/tag.js"></script>
+    <script src="scripts/app/entities/tag/tag.controller.js"></script>
+    <script src="scripts/app/entities/tag/tag-dialog.controller.js"></script>
+    <script src="scripts/app/entities/tag/tag-delete-dialog.controller.js"></script>
+    <script src="scripts/app/entities/tag/tag-detail.controller.js"></script>
+    <script src="scripts/components/entities/tag/tag.service.js"></script>
+    <script src="scripts/components/entities/tag/tag.search.service.js"></script>
     <!-- endbuild -->
 </body>
 </html>
