ADD: Java Domain Model finished
Added Payment entity and its relatinship with AppUser and Request.
Populate currently working.
Test failing, it will be patched when added more entities to the populate file.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -240,6 +240,20 @@
     <script src="scripts/app/entities/disponibility/disponibility-detail.controller.js"></script>
     <script src="scripts/components/entities/disponibility/disponibility.service.js"></script>
     <script src="scripts/components/entities/disponibility/disponibility.search.service.js"></script>
+    <script src="scripts/app/entities/assessment/assessment.js"></script>
+    <script src="scripts/app/entities/assessment/assessment.controller.js"></script>
+    <script src="scripts/app/entities/assessment/assessment-dialog.controller.js"></script>
+    <script src="scripts/app/entities/assessment/assessment-delete-dialog.controller.js"></script>
+    <script src="scripts/app/entities/assessment/assessment-detail.controller.js"></script>
+    <script src="scripts/components/entities/assessment/assessment.service.js"></script>
+    <script src="scripts/components/entities/assessment/assessment.search.service.js"></script>
+    <script src="scripts/app/entities/payment/payment.js"></script>
+    <script src="scripts/app/entities/payment/payment.controller.js"></script>
+    <script src="scripts/app/entities/payment/payment-dialog.controller.js"></script>
+    <script src="scripts/app/entities/payment/payment-delete-dialog.controller.js"></script>
+    <script src="scripts/app/entities/payment/payment-detail.controller.js"></script>
+    <script src="scripts/components/entities/payment/payment.service.js"></script>
+    <script src="scripts/components/entities/payment/payment.search.service.js"></script>
     <!-- endbuild -->
 </body>
 </html>
