--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -67,6 +67,7 @@
         <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
         <script src="bower_components/sockjs-client/dist/sockjs.js"></script>
         <script src="bower_components/stomp-websocket/lib/stomp.min.js"></script>
+        <script src="bower_components/ngletteravatar/ngletteravatar.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
