ADD: Curriculum populate
Added 2 Curriculum entities

--- a/src/main/webapp/scripts/app/entities/need/need-detail.html
+++ b/src/main/webapp/scripts/app/entities/need/need-detail.html
@@ -28,10 +28,10 @@
             </tr>
             <tr>
                 <td>
-                    <span translate="volunteercrowdApp.need.cathegory">Cathegory</span>
+                    <span translate="volunteercrowdApp.need.category">category</span>
                 </td>
                 <td>
-                    <span class="form-control-static">{{need.cathegory}}</span>
+                    <span class="form-control-static">{{need.category}}</span>
                 </td>
             </tr>
             <tr>
