--- a/src/main/webapp/scripts/app/entities/need/needs.html
+++ b/src/main/webapp/scripts/app/entities/need/needs.html
@@ -6,7 +6,7 @@
             <div class="col-xs-4 no-padding-left">
                 <button class="btn btn-primary" ui-sref="need.new" >
                     <span class="glyphicon glyphicon-plus"></span>
-                    <span 
+                    <span
 class="hidden-xs"                        translate="volunteercrowdApp.need.home.createLabel">Create new Need
                     </span>
                 </button>
@@ -33,7 +33,7 @@ class="hidden-xs"                        translate="volunteercrowdApp.need.home.
                     <th jh-sort-by="id"><span translate="global.field.id">ID</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="title"><span translate="volunteercrowdApp.need.title">Title</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="description"><span translate="volunteercrowdApp.need.description">Description</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th jh-sort-by="cathegory"><span translate="volunteercrowdApp.need.cathegory">Cathegory</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="category"><span translate="volunteercrowdApp.need.category">category</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="deleted"><span translate="volunteercrowdApp.need.deleted">Deleted</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="location"><span translate="volunteercrowdApp.need.location">Location</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="creationDate"><span translate="volunteercrowdApp.need.creationDate">CreationDate</span> <span class="glyphicon glyphicon-sort"></span></th>
@@ -47,7 +47,7 @@ class="hidden-xs"                        translate="volunteercrowdApp.need.home.
                     <td><a ui-sref="need.detail({id:need.id})">{{need.id}}</a></td>
                     <td>{{need.title}}</td>
                     <td>{{need.description}}</td>
-                    <td>{{need.cathegory}}</td>
+                    <td>{{need.category}}</td>
                     <td>{{need.deleted}}</td>
                     <td>{{need.location}}</td>
                     <td>{{need.creationDate | date:'medium'}}</td>
@@ -59,7 +59,7 @@ class="hidden-xs"                        translate="volunteercrowdApp.need.home.
                         <div class="btn-group flex-btn-group-container">
                             <button type="submit"
                                     ui-sref="need.detail({id:need.id})"
-                                    class="btn btn-info btn-sm"> 
+                                    class="btn btn-info btn-sm">
                                 <span class="glyphicon glyphicon-eye-open"></span>
                                 <span class="hidden-xs hidden-sm" translate="entity.action.view"></span>
                             </button>
@@ -71,7 +71,7 @@ class="hidden-xs"                        translate="volunteercrowdApp.need.home.
                             </button>
                             <button type="submit"
                                     ui-sref="need.delete({id:need.id})"
-                                    class="btn btn-danger btn-sm">                                    
+                                    class="btn btn-danger btn-sm">
                                 <span class="glyphicon glyphicon-remove-circle"></span>
                                 <span class="hidden-xs hidden-sm" translate="entity.action.delete"></span>
                             </button>
