--- a/src/main/webapp/scripts/app/entities/disponibility/disponibility-delete-dialog.html
+++ b/src/main/webapp/scripts/app/entities/disponibility/disponibility-delete-dialog.html
@@ -1,4 +1,4 @@
-<form name="deleteForm" ng-submit="confirmDelete(disponibility.id)">
+<form name="deleteForm" ng-submit="confirmDelete(availability.id)">
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
                 ng-click="clear()">&times;</button>
@@ -6,7 +6,8 @@
     </div>
     <div class="modal-body">
         <jh-alert-error></jh-alert-error>
-        <p translate="volunteercrowdApp.disponibility.delete.question" translate-values="{id: '{{disponibility.id}}'}">Are you sure you want to delete this Disponibility?</p>
+        <p translate="volunteercrowdApp.availability.delete.question" translate-values="{id: '{{availability.id}}'}">Are
+            you sure you want to delete this Availability?</p>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="clear()">
