--- a/src/main/webapp/scripts/app/entities/disponibility/disponibility-dialog.html
+++ b/src/main/webapp/scripts/app/entities/disponibility/disponibility-dialog.html
@@ -4,19 +4,20 @@
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
                 ng-click="clear()">&times;</button>
-        <h4 class="modal-title" id="myDisponibilityLabel" translate="volunteercrowdApp.disponibility.home.createOrEditLabel">Create or edit a Disponibility</h4>
+        <h4 class="modal-title" id="myAvailabilityLabel"
+            translate="volunteercrowdApp.availability.home.createOrEditLabel">Create or edit a Availability</h4>
     </div>
     <div class="modal-body">
         <jh-alert-error></jh-alert-error>
         <div class="form-group">
             <label for="id" translate="global.field.id">ID</label>
             <input type="text" class="form-control" id="id" name="id"
-                    ng-model="disponibility.id" readonly />
+                   ng-model="availability.id" readonly/>
         </div>
         <div class="form-group">
-            <label class="control-label" translate="volunteercrowdApp.disponibility.startMoment" for="field_startMoment">StartMoment</label>
+            <label class="control-label" translate="volunteercrowdApp.availability.startMoment" for="field_startMoment">StartMoment</label>
             <input type="datetime-local" class="form-control" name="startMoment" id="field_startMoment"
-                    ng-model="disponibility.startMoment"
+                   ng-model="availability.startMoment"
                     required />
             <div ng-show="editForm.startMoment.$invalid">
                 <p class="help-block"
@@ -30,9 +31,9 @@
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label" translate="volunteercrowdApp.disponibility.endMoment" for="field_endMoment">EndMoment</label>
+            <label class="control-label" translate="volunteercrowdApp.availability.endMoment" for="field_endMoment">EndMoment</label>
             <input type="datetime-local" class="form-control" name="endMoment" id="field_endMoment"
-                    ng-model="disponibility.endMoment"
+                   ng-model="availability.endMoment"
                     required />
             <div ng-show="editForm.endMoment.$invalid">
                 <p class="help-block"
@@ -47,8 +48,9 @@
         </div>
 
         <div class="form-group">
-            <label translate="volunteercrowdApp.disponibility.need" for="field_need">need</label>
-            <select class="form-control" id="field_need" name="need" ng-model="disponibility.need" ng-options="need as need.id for need in needs track by need.id">
+            <label translate="volunteercrowdApp.availability.need" for="field_need">need</label>
+            <select class="form-control" id="field_need" name="need" ng-model="availability.need"
+                    ng-options="need as need.id for need in needs track by need.id">
                 <option value=""></option>
             </select>
         </div>
