--- a/src/main/webapp/scripts/app/entities/disponibility/disponibilitys.html
+++ b/src/main/webapp/scripts/app/entities/disponibility/disponibilitys.html
@@ -1,20 +1,21 @@
 <div>
-    <h2 translate="volunteercrowdApp.disponibility.home.title">Disponibilitys</h2>
+    <h2 translate="volunteercrowdApp.availability.home.title">Availabilitys</h2>
     <jh-alert></jh-alert>
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-4 no-padding-left">
-                <button class="btn btn-primary" ui-sref="disponibility.new" >
+                <button class="btn btn-primary" ui-sref="availability.new">
                     <span class="glyphicon glyphicon-plus"></span>
-                    <span 
-class="hidden-xs"                        translate="volunteercrowdApp.disponibility.home.createLabel">Create new Disponibility
+                    <span
+                        class="hidden-xs" translate="volunteercrowdApp.availability.home.createLabel">Create new Availability
                     </span>
                 </button>
             </div>
             <div class="col-xs-8 no-padding-right">
                 <form name="searchForm" class="form-inline">
                     <div class="input-group pull-right" >
-                        <input type="text" class="form-control" ng-model="searchQuery" id="searchQuery" placeholder="{{ 'volunteercrowdApp.disponibility.home.search' | translate }}">
+                        <input type="text" class="form-control" ng-model="searchQuery" id="searchQuery"
+                               placeholder="{{ 'volunteercrowdApp.availability.home.search' | translate }}">
                         <span  class="input-group-btn width-min" >
                             <button class="btn btn-info" ng-click="search()">
                                 <span class="glyphicon glyphicon-search"></span>
@@ -31,37 +32,41 @@ class="hidden-xs"                        translate="volunteercrowdApp.disponibil
             <thead>
                 <tr jh-sort="predicate" ascending="reverse" callback="loadAll()">
                     <th jh-sort-by="id"><span translate="global.field.id">ID</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th jh-sort-by="startMoment"><span translate="volunteercrowdApp.disponibility.startMoment">StartMoment</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th jh-sort-by="endMoment"><span translate="volunteercrowdApp.disponibility.endMoment">EndMoment</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th jh-sort-by="need.id"><span translate="volunteercrowdApp.disponibility.need">need</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="startMoment"><span translate="volunteercrowdApp.availability.startMoment">StartMoment</span>
+                        <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="endMoment"><span
+                        translate="volunteercrowdApp.availability.endMoment">EndMoment</span> <span
+                        class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="need.id"><span translate="volunteercrowdApp.availability.need">need</span> <span
+                        class="glyphicon glyphicon-sort"></span></th>
                     <th></th>
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="disponibility in disponibilitys track by disponibility.id">
-                    <td><a ui-sref="disponibility.detail({id:disponibility.id})">{{disponibility.id}}</a></td>
-                    <td>{{disponibility.startMoment | date:'medium'}}</td>
-                    <td>{{disponibility.endMoment | date:'medium'}}</td>
+            <tr ng-repeat="availability in availabilities track by availability.id">
+                <td><a ui-sref="availability.detail({id:availability.id})">{{availability.id}}</a></td>
+                <td>{{availability.startMoment | date:'medium'}}</td>
+                <td>{{availability.endMoment | date:'medium'}}</td>
                     <td>
-                        <a ui-sref="need.detail({id:disponibility.need.id})">{{disponibility.need.id}}</a>
+                        <a ui-sref="need.detail({id:availability.need.id})">{{availability.need.id}}</a>
                     </td>
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
                             <button type="submit"
-                                    ui-sref="disponibility.detail({id:disponibility.id})"
-                                    class="btn btn-info btn-sm"> 
+                                    ui-sref="availability.detail({id:availability.id})"
+                                    class="btn btn-info btn-sm">
                                 <span class="glyphicon glyphicon-eye-open"></span>
                                 <span class="hidden-xs hidden-sm" translate="entity.action.view"></span>
                             </button>
                             <button type="submit"
-                                    ui-sref="disponibility.edit({id:disponibility.id})"
+                                    ui-sref="availability.edit({id:availability.id})"
                                     class="btn btn-primary btn-sm">
                                 <span class="glyphicon glyphicon-pencil"></span>
                                 <span class="hidden-xs hidden-sm" translate="entity.action.edit"></span>
                             </button>
                             <button type="submit"
-                                    ui-sref="disponibility.delete({id:disponibility.id})"
-                                    class="btn btn-danger btn-sm">                                    
+                                    ui-sref="availability.delete({id:availability.id})"
+                                    class="btn btn-danger btn-sm">
                                 <span class="glyphicon glyphicon-remove-circle"></span>
                                 <span class="hidden-xs hidden-sm" translate="entity.action.delete"></span>
                             </button>
