--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -192,6 +192,8 @@
     <script src="scripts/app/entities/curriculum/curriculum-detail.controller.js"></script>
     <script src="scripts/components/entities/curriculum/curriculum.service.js"></script>
     <script src="scripts/components/entities/curriculum/curriculum.search.service.js"></script>
+        <script src="scripts/components/entities/gender/gender.service.js"></script>
+        <script src="scripts/components/entities/gender/gender.search.service.js"></script>
     <script src="scripts/app/entities/ability/ability.js"></script>
     <script src="scripts/app/entities/ability/ability.controller.js"></script>
     <script src="scripts/app/entities/ability/ability-dialog.controller.js"></script>
