--- a/src/main/webapp/scripts/app/entities/naturalPerson/naturalPerson-dialog.html
+++ b/src/main/webapp/scripts/app/entities/naturalPerson/naturalPerson-dialog.html
@@ -15,30 +15,40 @@
         </div>
         <div class="form-group">
             <label class="control-label" translate="volunteercrowdApp.naturalPerson.birthDate" for="field_birthDate">BirthDate</label>
-                <div class="input-group">
-                    <input id="field_birthDate" type="text" class="form-control" uib-datepicker-popup="{{dateformat}}" ng-model="naturalPerson.birthDate" is-open="datePickerForBirthDate.status.opened"
-                    required/>
-                    <span class="input-group-btn">
-                        <button type="button" class="btn btn-default" ng-click="datePickerForBirthDateOpen($event)"><i class="glyphicon glyphicon-calendar"></i></button>
-                    </span>
-                </div>
+            <input type="datetime-local" class="form-control" name="birthDate" id="field_birthDate"
+                   ng-model="naturalPerson.birthDate"
+                   required/>
             <div ng-show="editForm.birthDate.$invalid">
                 <p class="help-block"
                     ng-show="editForm.birthDate.$error.required" translate="entity.validation.required">
                     This field is required.
+                </p>
+
+                <p class="help-block"
+                   ng-show="editForm.birthDate.$error.ZonedDateTimelocal"
+                   translate="entity.validation.ZonedDateTimelocal">
+                    This field should be a date and time.
                 </p>
             </div>
         </div>
 
         <div class="form-group">
             <label translate="volunteercrowdApp.naturalPerson.gender" for="field_gender">gender</label>
-            <select class="form-control" id="field_gender" name="gender" ng-model="naturalPerson.gender" ng-options="gender as gender.name for gender in genders | orderBy:'id' track by gender.id">
+            <select class="form-control" id="field_gender" name="gender" ng-model="naturalPerson.gender"
+                    ng-options="gender as gender.name for gender in genders | orderBy:'name' track by gender.name">
                 <option value=""></option>
             </select>
         </div>
         <div class="form-group">
             <label translate="volunteercrowdApp.naturalPerson.appUser" for="field_appUser">appUser</label>
             <select class="form-control" id="field_appUser" name="appUser" ng-model="naturalPerson.appUser" ng-options="appUser as appUser.id for appUser in appusers | orderBy:'id' track by appUser.id">
+                <option value=""></option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label translate="volunteercrowdApp.naturalPerson.curriculum" for="field_curriculum">curriculum</label>
+            <select class="form-control" id="field_curriculum" name="curriculum" ng-model="naturalPerson.curriculum"
+                    ng-options="curriculum as curriculum.id for curriculum in curriculums | orderBy:'id' track by curriculum.id">
                 <option value=""></option>
             </select>
         </div>
