FIX: Authenticated users can't access naturalPersonForm
Added the state with parent "account" to the auth.service.js file

--- a/src/main/webapp/app/entities/natural-person-form/natural-person-form-dialog.html
+++ b/src/main/webapp/app/entities/natural-person-form/natural-person-form-dialog.html
@@ -3,7 +3,7 @@
         <div class="col-md8 col-md-offset-2">
             <h1 translate="register.title">Registration</h1>
 
-            <div class="alert alert-success" ng-show="vm.success" translate="register.messages.success">
+            <!--<div class="alert alert-success" ng-show="vm.success" translate="register.messages.success">
                 <strong>Registration saved!</strong> Please check your email for confirmation.
             </div>
 
@@ -22,7 +22,7 @@
 
             <div class="alert alert-danger" ng-show="vm.doNotMatch" translate="global.messages.error.dontmatch">
                 The password and its confirmation do not match!
-            </div>
+            </div>-->
         </div>
 
 
